# posets

./: Poset.hs  README.md  acts.cabal  int-posets.cabal  posets.cabal
examples/: ex1.hs
src/Data/: Poset.hs  Semilattice.hs
src/Data/Poset/: Graph.hs  Morphism.hs  Poset.hs  Semilattice.hs
tests/: Morphism.hs
