Name:                   int-posets
Version:                0.0.0
Category:               Math
Synopsis:               Posets as Ints
Description:            

License:                MIT
License-file:           LICENSE

Author:                 Dmitry Malikov
Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>

Build-type:             Simple
Cabal-version:          >= 1.6
Homepage:               _

Library
  Build-Depends:        base >= 3 && < 5,
                        containers,
                        mtl

  HS-Source-Dirs:       src/

  Exposed-Modules:      Data.Poset,
                        Data.Poset.Graph,
                        Data.Poset.Morphism,
                        Data.Poset.Semilattice

  GHC-Options:          -Wall


Source-repository head
  type:                 git
  location:             _

