Name:                   posets
Version:                0.1
Category:               Math
Synopsis:               Posets
Description:            In mathematics, poset is a set with partial order over it. Partial order is a such order, that not every pair of elements should be related. Partial order should be reflexive, antisymmetric, and transitive.

License:                MIT
License-file:           LICENSE

Author:                 Dmitry Malikov
Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>

Build-type:             Simple
Cabal-version:          >= 1.6
Homepage:               https://github.com/dmalikov/posets

Library
  Build-Depends:        base >= 3 && < 5,
                        containers,
                        mtl

  HS-Source-Dirs:       src/

  Exposed-Modules:      Data.Poset,
                        Data.Poset.Graph,
                        Data.Poset.Morphism,
                        Data.Poset.Semilattice

  GHC-Options:          -Wall


Source-repository head
  type:                 git
  location:             git://github.com/dmalikov/posets.git

